--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1706,3 +1706,14 @@ volume = {13},
 journal = {Computing in Science \& Engineering},
 doi = {10.1109/MCSE.2011.37}
 }
+
+@book{gitbook,
+author = {Chacon, Scott and Straub, Ben},
+title = {Pro Git},
+year = {2014},
+isbn = {1484200772},
+publisher = {Apress},
+address = {USA},
+edition = {2nd},
+url = {https://git-scm.com/book/en/v2}
+}
