--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1717,3 +1717,29 @@ address = {USA},
 edition = {2nd},
 url = {https://git-scm.com/book/en/v2}
 }
+
+@misc{nnabla,
+      title={Neural Network Libraries: A Deep Learning Framework Designed from Engineers' Perspectives}, 
+      author={Akio Hayakawa and Masato Ishii and Yoshiyuki Kobayashi and Akira Nakamura and Takuya Narihira and Yukio Obuchi and Andrew Shin and Takuya Yashima and Kazuki Yoshiyama},
+      year={2021},
+      eprint={2102.06725},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@article{deepcpuinf,
+author={Mittal, Sparsh and Rajput, Poonam and Subramoney, Sreenivas},
+journal={IEEE Transactions on Neural Networks and Learning Systems},
+title={A Survey of Deep Learning on CPUs: Opportunities and Co-Optimizations},
+year={2021},
+pages={1-21},
+doi={10.1109/TNNLS.2021.3071762}
+}
+
+@inproceedings{deepcpuinf2,
+author={Wu, Carole-Jean and Brooks, David and Chen, Kevin and Chen, Douglas and Choudhury, Sy and Dukhan, Marat and Hazelwood, Kim and Isaac, Eldad and Jia, Yangqing and Jia, Bill and Leyvand, Tommer and Lu, Hao and Lu, Yang and Qiao, Lin and Reagen, Brandon and Spisak, Joe and Sun, Fei and Tulloch, Andrew and Vajda, Peter and Wang, Xiaodong and Wang, Yanghan and Wasti, Bram and Wu, Yiming and Xian, Ran and Yoo, Sungjoo and Zhang, Peizhao},
+booktitle={2019 IEEE International Symposium on High Performance Computer Architecture (HPCA)},
+title={Machine Learning at Facebook: Understanding Inference at the Edge},
+year={2019},
+pages={331-344},
+doi={10.1109/HPCA.2019.00048}}
