--- a/latex/ch2_background.tex
+++ b/latex/ch2_background.tex
@@ -285,7 +285,7 @@ Various plots of STFT and CQT spectrograms are shown in figure \ref{fig:cqtvstft
 \subsubsection{Nonstationary Gabor Transform (NSGT)}
 \label{sec:theorynsgt}
 
-\textcite{doerflerphd} analyzed music with multiple Gabor dictionaries (i.e. STFTs). Figure \ref{fig:dorflertradeoff} shows the time-frequency tradeoff of the short and long window STFT analyses of the glockenspiel signal for its transient and tonal characteristics, and how two Gabor dictionaries combined gives us the ability to analyze either the transient or tonal aspects with a more appropriate resolution.
+\textcite{doerflerphd} in their dissertation analyzed music with multiple Gabor dictionaries (i.e. STFTs). Figure \ref{fig:dorflertradeoff} shows the time-frequency tradeoff of the short and long window STFT analyses of the glockenspiel signal for its transient and tonal characteristics, and how two Gabor dictionaries combined gives us the ability to analyze either the transient or tonal aspects with a more appropriate resolution.
 
 \begin{figure}[ht]
 	\centering
