--- a/latex/ch4_experiment.tex
+++ b/latex/ch4_experiment.tex
@@ -326,6 +326,6 @@ Table \ref{table:infperf} shows the measured times. For xumx-sliCQ, both the sli
 	\label{table:infperf}
 \end{table}
 
-xumx-sliCQ is slower in its inference performance than UMX. Overall, xumx-sliCQ is smaller on disk, which is an advantage over UMX, but it executes \textasciitilde2x slower than UMX with the STFT-Wiener-EM step while producing lower BSS metrics in the music demixing task. xumx-sliCQ with the sliCQT-Wiener-EM step is slower still, at almost \textasciitilde4x slower than UMX and \textasciitilde2x slower for a negligible (\textasciitilde0.1 dB) boost in the median SDR score.
+xumx-sliCQ is slower in its inference performance than UMX. Overall, xumx-sliCQ is smaller on disk, which is an advantage over UMX, but it executes \textasciitilde2x slower than UMX with the STFT-Wiener-EM step while producing lower BSS metrics in the music demixing task. xumx-sliCQ with the sliCQT-Wiener-EM step is \textasciitilde2x slower than with the STFT-Wiener-EM step for a small \textasciitilde0.1 dB boost in the median SDR score.
 
 \end{document}
