--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1743,3 +1743,21 @@ title={Machine Learning at Facebook: Understanding Inference at the Edge},
 year={2019},
 pages={331-344},
 doi={10.1109/HPCA.2019.00048}}
+
+@misc{waveunet,
+      title={Wave-U-Net: A Multi-Scale Neural Network for End-to-End Audio Source Separation}, 
+      author={Daniel Stoller and Sebastian Ewert and Simon Dixon},
+      year={2018},
+      eprint={1806.03185},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}
+
+@misc{endtoend,
+      title={End-to-end music source separation: is it possible in the waveform domain?}, 
+      author={Francesc Lluís and Jordi Pons and Xavier Serra},
+      year={2019},
+      eprint={1810.12187},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}
